--- a/week1/deleteButton/style.css
+++ b/week1/deleteButton/style.css
@@ -1,9 +1,9 @@
 body{
-    background-color: palegoldenrod;
+    background-color: whitesmoke;
 }
 
 #my-list {
-    background-color: blueviolet;
+    background-color: lightgrey;
 }
 
 .my-buttons {
